add main to purple theme back in

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -535,7 +535,7 @@ nav li {
 THEMES
 *********/
 
-body.purple {
+body.purple main {
   .breadcrumbs-outer {
     background-color: var(--purple);
   }
