--- a/styles/styles.css
+++ b/styles/styles.css
@@ -303,12 +303,20 @@ a:hover {
   margin: 8px;
 }
 
+sup, sub{
+  font-size: var(--body-font-size-xxs);
+}
+
 .button-container.has-subtext{
   text-align: center;
 
   .button-subtext {
     display: block;
     font-size: var(--body-font-size-xxs);
+
+    br {
+      display: none;
+    }
 
     &a{
       color: var(--waz-blue);
@@ -540,8 +548,32 @@ body.purple main {
     background-color: var(--purple);
   }
 
-  a {
-    color: var(--laz-logo-blue);
+  a,h2, h3, h4, h5, h6, a:any-link {
+    color: var(--purple);
+  }
+
+  .button.primary {
+    color: var(--white);
+    background-color: var(--purple);
+    border-color: var(--purple);
+
+    &:hover {
+      color: var(--purple);
+      background-color: transparent;
+      border-color: var(--purple);
+    }
+  }
+
+  .button.secondary {
+    color: var(--purple);
+    border-color: var(--purple);
+    background-color: transparent;
+
+    &:hover {
+      background-color: var(--purple);
+      color: var(--white);
+      border-color: var(--purple);
+    }
   }
 
   .table table th {
@@ -572,37 +604,94 @@ body.purple main {
   background-color: var(--purple);
   color: var(--white);
 
-  a {
+  a:not(.button) {
     text-decoration: underline;
   }
 
   h1, h2, h3, h4, h5, h6, a:any-link {
     color: var(--white);
   }
+
+  .button.primary.bgcolor-theme {
+    background-color: var(--white);
+    border-color: var(--white);
+    color: var(--purple);
+
+    &:hover {
+      color: var(--white);
+      background-color: var(--purple);
+    }
+  }
+
+  .button.secondary.textcolor-theme {
+    color: var(--white);
+    border-color: var(--white);
+
+    &:hover {
+      background-color: var(--white);
+      color: var(--purple);
+    }
+  }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--purple);
+    }
+  }
+}
+
+[data-theme="light-blue"]:not([data-background]) {
+  background-color: var(--sky-blue);
+
+  a {
+    text-decoration: underline;
+  }
+
+  .button.primary.bgcolor-theme {
+    background-color: var(--white);
+    border-color: var(--white);
+    color: var(--sky-blue);
+
+    &:hover {
+      color: var(--white);
+      background-color: var(--sky-blue);
+    }
+  }
+
+  .button.secondary.textcolor-theme {
+    color: var(--white);
+    border-color: var(--white);
+
+    &:hover {
+      background-color: var(--white);
+      color: var(--sky-blue);
+    }
+  }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--sky-blue);
+    }
+  }
 }
 
 [data-theme="gray"]:not([data-background]) {
-  & .section.inner, & .section{
-    padding: 40px;
     background-color: var(--gray);
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--gray);
+    }
   }
 }
 
-[data-theme="orange-red"]:not([data-background]) {
-  & .section.inner, & .section{
-    padding: 40px;
-    background-color: var(--orange-red);
-  }
-
-  background-color: var(--orange-red);
-
-
-  h3 {
-    color: var(--white);
-  }
-}
-
-body.laz-blue {
+body.laz-blue main {
   .breadcrumbs-outer {
     background-color: var(--laz-blue);
   }
@@ -630,6 +719,30 @@ body.laz-blue {
     .cards.circle-image .card picture {
       background-color: var(--laz-blue);
     }
+
+  .button.primary {
+    color: var(--white);
+    background-color: var(--laz-blue);
+    border-color: var(--laz-blue);
+
+    &:hover {
+      color: var(--laz-blue);
+      background-color: transparent;
+      border-color: var(--laz-blue);
+    }
+  }
+
+  .button.secondary {
+    color: var(--laz-blue);
+    border-color: var(--laz-blue);
+    background-color: transparent;
+
+    &:hover {
+      background-color: var(--laz-blue);
+      color: var(--white);
+      border-color: var(--laz-blue);
+    }
+  }
 }
 
 
@@ -650,9 +763,17 @@ body.laz-blue {
     h1, h2, h3, h4, h5, h6, a:any-link  {
       color: var(--white);
     }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--laz-blue);
+    }
+  }
   }
 
-body.red {
+body.red main {
   .breadcrumbs-outer {
     background-color: var(--red);
   }
@@ -697,9 +818,17 @@ body.red {
       border-color: var(--red);
     }
   }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--red);
+    }
+  }
 }
 
-body.yellow {
+body.yellow main {
   .breadcrumbs-outer {
     background-color: var(--yellow);
   }
@@ -743,55 +872,21 @@ body.yellow {
     background-color: var(--yellow);
   }
 
-  a:any-link {
+  a:not(.button) {
     color: var(--text-color);
     text-decoration: underline;
   }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--yellow);
+    }
+  }
 }
 
-body.orange-red {
-  .breadcrumbs-outer {
-    background-color: var(--orange-red);
-  }
-
-  .button.primary {
-    background-color: var(--white);
-    border-color: var(--orange-red);
-    color: var(--orange-red);
-  }
-
-  .button.secondary {
-    background-color: var(--white);
-    border-color: var(--orange-red);
-    color: var(--orange-red);
-  }
-
-  a {
-    color: var(--orange-red);
-  }
-
-  h2 {
-    color: var(--orange-red);
-  }
-
-  .table table th {
-    background-color: var(--orange-red);
-    }
-
-  .accordion.round .accordion-item-label {
-    border: 2px solid var(--orange-red);
-  }
-
-  .accordion.round details summary {
-    color: var(--orange-red);
-  }
-
-    .cards.circle-image .card picture {
-      background-color: var(--orange-red);
-    }
-}
-
-body.berry {
+body.berry main {
   & h3, a {
     color: var(--product-berry);
   }
@@ -807,9 +902,38 @@ body.berry {
 
 [data-theme="pink"] {
   background-color: var(--light-pink);
+
+  .button.primary.bgcolor-theme {
+    background-color: var(--white);
+    border-color: var(--white);
+    color: var(--light-pink);
+
+    &:hover {
+      color: var(--white);
+      background-color: var(--light-pink);
+    }
+  }
+
+  .button.secondary.textcolor-theme {
+    color: var(--white);
+    border-color: var(--white);
+
+    &:hover {
+      background-color: var(--white);
+      color: var(--light-pink);
+    }
+  }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--light-pink);
+    }
+  }
 }
 
-body [data-theme="berry"], body [data-theme="berry-gradient"] {
+body main [data-theme="berry"], body main [data-theme="berry-gradient"] {
   h2, h3, h4, h5, h6, p, li, a:any-link {
     color: var(--white);
   }
@@ -890,6 +1014,89 @@ body [data-theme="berry"], body [data-theme="berry-gradient"] {
       .bg-image-container {
         padding: 60px;
       }
+    }
+  }
+}
+
+body.orange-red main {
+  .breadcrumbs-outer {
+    background-color: var(--orange-red);
+  }
+
+  .button.primary {
+    border-color: var(--orange-red);
+    color: var(--orange-red);
+  }
+
+  .button.secondary {
+    background-color: var(--white);
+    border-color: var(--orange-red);
+    color: var(--orange-red);
+  }
+
+  a {
+    color: var(--orange-red);
+  }
+
+  h2 {
+    color: var(--orange-red);
+  }
+
+  .table table th {
+    background-color: var(--orange-red);
+  }
+
+  .accordion.round .accordion-item-label {
+    border: 2px solid var(--orange-red);
+  }
+
+  .accordion.round details summary {
+    color: var(--orange-red);
+  }
+
+  .cards.circle-image .card picture {
+    background-color: var(--orange-red);
+  }
+}
+
+[data-theme="orange-red"]:not([data-background]) {
+  & .section.inner, & .section{
+    padding: 40px;
+    background-color: var(--orange-red);
+  }
+
+  background-color: var(--orange-red);
+
+  .button.primary.bgcolor-theme {
+    background-color: var(--white);
+    border-color: var(--white);
+    color: var(--orange-red);
+
+    &:hover {
+      color: var(--white);
+      background-color: var(--orange-red);
+    }
+  }
+
+  .button.secondary.textcolor-theme {
+    color: var(--white);
+    border-color: var(--white);
+
+    &:hover {
+      background-color: var(--white);
+      color: var(--orange-red);
+    }
+  }
+
+  h3 {
+    color: var(--white);
+  }
+
+  &:has(.inner) {
+    background-color: var(--white);
+
+    .section.inner {
+      background-color: var(--orange-red);
     }
   }
 }
