--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -75,7 +75,7 @@
   margin: 0;
   padding: 0;
   border-radius: 50%;
-  background-color: #cbcbcb;
+  background-color: #var(--light-gray);
   transition: background-color 0.2s;
   border: none;
 }
