--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -21,7 +21,7 @@ body.no-nav {
 
 
 header .nav-wrapper {
-  background-color: var(--background-color);
+  background-color: var(--white);
   width: 100%;
   position: relative;
   z-index: 5;
@@ -157,8 +157,8 @@ header .nav-tools ul>li a.button {
 }
 
 header .nav-sections ul.primary-nav-items>li[aria-expanded="true"]>a {
-  color: var(--red) !important;
-  border-bottom: 2px solid var(--red);
+  color: var(--product-red) !important;
+  border-bottom: 2px solid var(--product-red);
 }
 
 header .nav-sections ul.primary-nav-items>li[aria-expanded="true"]:not(.button-container)>a:not(.button)::after {
@@ -414,7 +414,7 @@ header .megamenu>.section-outer {
     }
 
     button {
-      background-color: var(--red);
+      background-color: var(--product-red);
       height: 100%;
       width: 10%;
       border-top-right-radius: 4px;
@@ -492,7 +492,7 @@ header .megamenu>.section-outer {
 
   ul>li>a {
     font-weight: var(--font-weight-normal);
-    color: #48433F;
+    color: var(--charcoal-gray);
     text-transform: none;
     display: flex;
     align-items: center;
