--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -26,7 +26,7 @@ main > .section-outer > .section.hero-container{
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  color: var(--background-color);
+  color: var(--white);
   font-size: var(--heading-font-size-xxl);
   text-shadow: 1px 1px 6px var(--medium-gray);
 }
