--- a/blocks/related-posts/related-posts.css
+++ b/blocks/related-posts/related-posts.css
@@ -4,7 +4,7 @@
     .posts-list {
         padding-top: 15px;
         margin-bottom: 10px;
-        border-bottom: 1px solid #cbcbcb;
+        border-bottom: 1px solid #var(--light-gray);
 
         &:last-child {
             border-bottom: none;
