--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -130,6 +130,10 @@
     height: auto;
     position: relative;
 
+    .card-thumbnail {
+      overflow: hidden;
+    }
+
     picture {
       background-color: var(--black);
 
