--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -7,12 +7,41 @@
   align-items: stretch;
 }
 
-.columns.middle > div {
-  align-items: center;
+.columns.stacked {
+  display: grid;
+  grid-template-columns: 1fr;
 
-  > * {
-    margin: 0;
+  &.gray {
+    background: var(--gray);
+    border-radius: 0;
+    padding: 15px;
+    margin-bottom: 0;
   }
+
+  > div {
+    display: contents;
+    padding-bottom: 0;
+  }
+}
+
+  .columns.middle > div {
+    align-items: center;
+
+    > * {
+      margin: 0;
+    }
+  }
+
+.columns.stacked > div > div:nth-child(1) {
+    order: 1;
+  }
+
+.columns.stacked > div > div:nth-child(2) {
+  order: 2;
+}
+
+.columns.stacked > div > div:nth-child(3) {
+  order: 3;
 }
 
 .columns img {
@@ -32,7 +61,7 @@
 }
 
 .columns > div > .columns-img-col img {
-  display: block;
+  /* display: block; */
 }
 
 .columns.top > div, .columns.top .buttons-container {
@@ -64,6 +93,17 @@
   }
 }
 
+
+.columns.translucent {
+  > div > div.col-has-content {
+    padding: 40px;
+    margin-bottom: 20px;
+    background-color: rgb(255 255 255 / 14%);
+    border-radius: 30px;
+  }
+}
+
+
 @media (width >=768px) {
   .columns {
   > div {
@@ -84,13 +124,20 @@
       }
     }
 
-    &.width-66 > div { /* first column 75% */
+    &.width-50 > div { /* first column 50% */
+
       > div:nth-child(1) {
-        flex: 1 1 61%;
+        flex: 1 1 48%;
+      }
+    }
+
+    &.width-66 > div { /* first column 66% */
+      > div:nth-child(1) {
+        flex: 1 1 64%;
       }
 
       > div:not(:nth-child(1)) {
-        flex: 1 1 38%;
+        flex: 1 1 31%;
       }
     }
 
@@ -109,6 +156,27 @@
 @media (width>=992px) {
   .footer .columns > div > div {
     flex: 1 1;
+  }
+
+  .columns.stacked {
+    display: block;
+
+    > div {
+      display: flex;
+      flex-direction: row;
+
+
+      > div:nth-child(1), div:nth-child(2), div:nth-child(3) {
+        container-type: inline-size;
+        width: 100%;
+        order: 1;
+        flex: 1 1 100%;
+      }
+    }
+  }
+
+  .columns.price {
+    width: 64%;
   }
 
   .columns.wrap > div > div {
