--- a/blocks/subnav/subnav.css
+++ b/blocks/subnav/subnav.css
@@ -1,5 +1,5 @@
 .subnav-wrapper {
-  background: #var(--very-light-gray);
+  background: var(--very-light-gray);
   margin: 0;
   padding: 0;
   line-height: 56px;
@@ -47,7 +47,7 @@
 
         &:hover, &:focus {
           text-decoration: none;
-          border-bottom: 6px solid #f7bd15;
+          border-bottom: 6px solid var(--gold);
           color: #56524e;
         }
 
@@ -64,7 +64,7 @@
       .key-topics &:nth-child(1) a,
       .correlation-tools &:nth-child(2) a,
       .faqs &:nth-child(3) a {
-        border-bottom: 6px solid #f7bd15;
+        border-bottom: 6px solid var(--gold);
       }
     }
   }
