--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,6 +253,10 @@ h3 {
 
 .center {
   text-align: center;
+
+  li {
+    text-align: left;
+  }
 }
 
 p,
@@ -599,6 +603,7 @@ THEMES
   --theme-accordion-border: var(--product-red);
   --theme-accordion-txt: var(--product-red);
   --theme-cards-circle-bg: var(--product-red);
+  --theme-btn-secondary-txt-hov: var(--product-red);
 }
 
 [data-theme="red"] {
@@ -797,9 +802,16 @@ THEMES
   --theme-table-head-bg: var(--laz-logo-blue);
 }
 
+[data-theme="red-pastel"] {
+  --theme-bg: var(--vaz-red-pastel);
+  --theme-text: var(--text-color);
+  --theme-heading-color: var(--laz-logo-blue);
+
+  color: var(--text-color);
+}
+
 [data-theme="pink"] {
   --theme-bg: var(--light-pink);
-  --theme-txt: var(--text-color);
   --theme-heading-color: var(--product-berry);
   --theme-link-color: var(--laz-logo-blue);
   --theme-btn-primary-txt: var(--white);
@@ -814,12 +826,43 @@ THEMES
   --theme-btn-secondary-bg-hov: var(--product-berry);
   --theme-table-head-bg: var(--product-berry);
 
+  color: var(--text-color);
+
   &:has(.inner) {
     .section.inner {
       background-color: var(--light-pink);
     }
   }
 }
+
+[data-theme="gradient-lin-red"]:has(+ :not(.section.inner)) {
+  background: var(--gradient-lin-red);
+}
+
+[data-theme="gradient-rad-red"]:has(+ :not(.section.inner)) {
+  background: var(--gradient-rad-red);
+}
+
+[data-theme="gradient-lin-red"]:has(.section.inner) {
+  background: none;
+
+  .section.inner {
+    background: var(--gradient-lin-red);
+
+    &:has(.bg-image-container) {
+      padding: 0;
+
+      h1 {
+        margin-top: 0;
+      }
+
+      .bg-image-container {
+        padding: 60px;
+      }
+    }
+  }
+}
+
 
 [data-theme="berry-gradient"]:has(+ :not(.section.inner)) {
   background: var(--gradient-rad-berry);
@@ -854,6 +897,11 @@ THEMES
 .bg-dark-blue, .bg-navy, .bg-red, .bg-berry, .bg-orange, .bg-purple, .bg-green, .bg-laz-blue {
   padding: 10px;
   color: var(--white);
+}
+
+.bg-gray {
+  padding: 10px;
+  background: var(--gray);
 }
 
 .bg-dark-blue {
@@ -956,6 +1004,18 @@ THEMES
     }
   }
 
+  &.bgcolor-bright-yellow {
+    background-color: var(--bright-yellow);
+    border-color: var(--bright-yellow);
+
+    &:hover {
+      color: var(--bright-yellow);
+      border-color: var(--bright-yellow);
+      background-color: var(--theme-btn-primary-bg-hov);
+    }
+  }
+
+
   &.bgcolor-laz-blue {
     background-color: var(--blog-blue);
     border-color: var(--blog-blue);
@@ -1028,6 +1088,7 @@ button.secondary {
   &:hover {
     background-color: var(--blog-blue);
     color: var(--white);
+    border-color: var(--blog-blue);
   }
 }
 
@@ -1037,17 +1098,19 @@ button.secondary {
 
   &:hover {
     background-color: var(--product-berry);
+    border-color: var(--product-berry);
     color: var(--white);
   }
 }
 
-.button.secondary.textcolor-navy {
+.button.secondary.textcolor-navy, .button.secondary.textcolor-navy-blue {
   color: var(--product-navy-blue);
   border-color: var(--product-navy-blue);
 
   &:hover {
     background-color: var(--product-navy-blue);
     color: var(--white);
+    border-color: var(--product-navy-blue);
   }
 }
 
@@ -1058,6 +1121,18 @@ button.secondary {
   &:hover {
     background-color: var(--rpe-gold);
     color: var(--white);
+    border-color: var(--rpe-gold);
+  }
+}
+
+.button.secondary.textcolor-bright-yellow {
+  color: var(--bright-yellow);
+  border-color: var(--bright-yellow);
+
+  &:hover {
+    background-color: var(--bright-yellow);
+    color: var(--product-red);
+    border-color: var(--bright-yellow);
   }
 }
 
@@ -1068,6 +1143,7 @@ button.secondary {
   &:hover {
     background-color: var(--product-dark-blue);
     color: var(--white);
+    border-color: var(--product-dark-blue);
   }
 }
 
@@ -1078,6 +1154,7 @@ button.secondary {
   &:hover {
     background-color: var(--product-orange);
     color: var(--white);
+    border-color: var(--product-orange);
   }
 }
 
@@ -1088,6 +1165,7 @@ button.secondary {
   &:hover {
     background-color: var(--product-purple);
     color: var(--white);
+    border-color: var(--product-purple);
   }
 }
 
@@ -1098,6 +1176,7 @@ button.secondary {
   &:hover {
     background-color: var(--product-green);
     color: var(--white);
+    border-color: var(--product-green);
   }
 }
 
@@ -1108,6 +1187,7 @@ button.secondary {
   &:hover {
     background-color: var(--laz-black);
     color: var(--white);
+    border-color: var(--laz-black);
   }
 }
 
@@ -1156,6 +1236,10 @@ button.secondary {
 
     .section.short {
       padding: 10px 15px;
+
+      .columns:last-child > div {
+        padding-bottom: 0;
+      }
     }
   }
 
