--- a/templates/wide/wide.css
+++ b/templates/wide/wide.css
@@ -13,6 +13,10 @@ p .icon-check-circle-white {
     }
 }
 
+.section-outer:not(:nth-child(2)) .section.product {
+    max-width: 750px;
+}
+
 @media (width >= 1024px) {
     .wide h1 {
         font-size: var(--heading-font-size-xxl);
