add default link color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,6 +166,8 @@
   --theme-btn-secondary-txt-hov: var(--white);
   --theme-table-head-txt: var(--white);
   --theme-heading-color: var(--laz-logo-blue);
+  --theme-link-color: var(--laz-logo-blue);
+
 } /* end root */
 
 
